crates/zuban_python/tests/mypylike/tests/auto_import.test
[case auto_import_our_own_mods]

#? code-actions
foo

#? --codepoint-column 0 code-actions
x.foo

[file x.py]
foo = 1

[out]
__main__:3: error: Name "foo" is not defined
__main__:6: error: Name "x" is not defined
__main__.py:3: Code Actions:
- Import `x.foo`: 3:0-3:0 replaced with: "from x import foo\n"
__main__.py:6: Code Actions:
- Import `x`: 3:0-3:0 replaced with: "import x\n"

[case auto_import_with_selection_should_have_single_import_for_repeats]
# flags: --no-typecheck

#? code-actions --until-line 6
foo
foo

[file x.py]
foo = 1

[out]
__main__.py:4: Code Actions:
- Import `x.foo`: 4:0-4:0 replaced with: "from x import foo\n"

[case auto_import_with_range]
# flags: --no-typecheck

bar
#? code-actions --until-line 6
foo
x
baz

[file x.py]
foo = 1
bar = 1
baz = 1

[out]
__main__.py:5: Code Actions:
- Import `x.foo`: 3:0-3:0 replaced with: "from x import foo\n"
- Import `x`: 3:0-3:0 replaced with: "import x\n"

[case auto_import_add_name_to_from1]
# flags: --no-typecheck
from x import a
#? code-actions
b

def f() -> None:
    #? code-actions
    b

[file x.py]
a = 1
b = 1

[file y.py]
a = 1
b = 1

[out]
__main__.py:4: Code Actions:
- Import `y.b`: 3:0-3:0 replaced with: "from y import b\n"
- Import `x.b`: 2:15-2:15 replaced with: ", b"
__main__.py:8: Code Actions:
- Import `x.b`: 2:15-2:15 replaced with: ", b"
- Import `y.b`: 3:0-3:0 replaced with: "from y import b\n"

[case auto_import_add_name_to_from2]
# flags: --no-typecheck
#? code-actions
b

def f() -> None:
    #? code-actions
    b

from x import a

[file x.py]
a = 1
b = 1

[file y.py]
a = 1
b = 1

[out]
__main__.py:3: Code Actions:
- Import `y.b`: 3:0-3:0 replaced with: "from y import b\n"
- Import `x.b`: 3:0-3:0 replaced with: "from x import b\n"
__main__.py:7: Code Actions:
- Import `x.b`: 9:15-9:15 replaced with: ", b"
- Import `y.b`: 3:0-3:0 replaced with: "from y import b\n"

[case auto_import_with_parens]
# flags: --no-typecheck
from x import (a, b)
#? code-actions
c

[file test2.py]
from x import (a, b,)
#? code-actions
c

[file test3.py]
from x import (a, b, )
#? code-actions
c

[file x.py]
a = 1
b = 1
c = 1

[out]
__main__.py:4: Code Actions:
- Import `x.c`: 2:19-2:19 replaced with: ", c"
test2.py:3: Code Actions:
- Import `x.c`: 1:20-1:20 replaced with: " c"
test3.py:3: Code Actions:
- Import `x.c`: 1:21-1:21 replaced with: "c"

[case auto_import_with_parens_multiline]
# flags: --no-typecheck
[file test1.py]
from x import (
    a, b
    )
#? code-actions
c

[file test2.py]
from x import (
    a,
    b
)
#? code-actions
c

[file test3.py]
from x import (
    a,
    b,
)
#? code-actions
c

[file x.py]
a = 1
b = 1
c = 1

[out]
test1.py:5: Code Actions:
- Import `x.c`: 2:8-2:8 replaced with: ", c"
test2.py:6: Code Actions:
- Import `x.c`: 3:5-3:5 replaced with: ", c"
test3.py:6: Code Actions:
- Import `x.c`: 3:6-3:6 replaced with: " c"

[case auto_import_of_module_in_namespaces]
# flags: --no-typecheck

#? code-actions
foo

[file bar/baz/foo.py]
[out]
__main__.py:4: Code Actions:
- Import `bar.baz.foo`: 4:0-4:0 replaced with: "from bar.baz import foo\n"

[case auto_import_of_nested_module]
# flags: --no-typecheck

#? code-actions
foo

[file bar/__init__.py]
[file bar/foo.py]
[out]
__main__.py:4: Code Actions:
- Import `bar.foo`: 4:0-4:0 replaced with: "from bar import foo\n"

[case auto_import_positions_with_docstrings]
# flags: --no-typecheck
[file test1.py]
"hello"

#? code-actions
foo

[file test2.py]
"""
hello
"""

#? code-actions
foo

[file test3.py]
"""
hello
"""

import bar
#? code-actions
foo

[file x.py]
foo = 1

[out]
test1.py:4: Code Actions:
- Import `x.foo`: 2:0-2:0 replaced with: "from x import foo\n"
test2.py:6: Code Actions:
- Import `x.foo`: 4:0-4:0 replaced with: "from x import foo\n"
test3.py:7: Code Actions:
- Import `x.foo`: 6:0-6:0 replaced with: "from x import foo\n"

[case auto_import_before_if]
# flags: --no-typecheck
"""
hello
"""
from typing import TYPE_CHECKING
# a
if TYPE_CHECKING
    import typing
# b

#? code-actions
foo
[file x.py]
foo = 1

[out]
__main__.py:12: Code Actions:
- Import `x.foo`: 6:0-6:0 replaced with: "from x import foo\n"
